[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perprof-py"
authors = [
  {name = "Abel Soares Siqueira", email = "abel.s.siqueira@gmail.com"},
  {name = "Raniere Gaia Costa da Silva", email = "raniere@ime.unicamp.br"},
  {name = "Luiz Rafael dos Santos", email = "l.r.santos@ufsc.br"},
]
description = "A python module for performance profiling (as described by Dolan and Moré)"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["benchmark", "comparison", "performance profile"]
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
  "pyyaml>=5,<7",
  "matplotlib>=3,<4",
  "bokeh>=2,<3",
  "pandas>=1,<2",
  "numpy>=1.20,<2.0",
]
version = "1.1.4"

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "prospector[with_pyroma]",
  "pylint",
  "pytest",
  "pytest-cov",
  "ruff",
  "isort",
]
publishing = [
  "build",
  "twine",
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "mike",
]

[project.scripts]
perprof = "perprof.main:main"

[project.urls]
repository = "https://github.com/abelsiqueira/perprof-py"
documentation = "https://perprof-py.readthedocs.org/en/latest/"

[tool.isort]
lines_after_impots = 2
force_single_line = 1
src_paths = "bird_cloud_gnn,tests"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["perprof"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 60

[tool.setuptools.packages.find]
where = ["."]
include = ["perprof*"]
exclude = ["docker", "tests*"]
namespaces = false

[tool.setuptools.package-data]
perprof = ["locale/*/*/*.mo", "examples/*.table"]

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pandas-stubs>=1.2.0.62",
    "types-pyyaml>=6.0.12.12",
]
